--- a/index.html
+++ b/index.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Portfolio Cathy</title>
-<link rel="stylesheet" href="styles.css">
 <html lang="fr">
 
 <head>
-
+    <meta charset="utf-8">
+    <title>Portfolio Cathy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <!--Font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
-
+    <!--mini banner -->
+    <nav class="mini-nav">
+        <ul>
+            <li><a href="#">Présentation</a></li>
+            <li><a href="#">Mes Projets</a></li>
+            <li><a href="#">Compétence</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <!-- main banner -->
+    <section class="bgimage" id="home">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                    <h2 class="hero_title">Bonjour je mapelle Cathy</h2>
+                    <p class="hero_desc">Bienvenue sur mon Portfolio</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- footer section-->
+    <footer id="footer">
+        <div class="social-icons">
+            <!-- social media icons -->
+            <div>
+                <a href="https://github.com/Parkwolf" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="mailto:cathyhegesippe@gmail.com" target="_blank"><i class="far fa-envelope"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
