--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <section class="bgimage" id="home">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
-                    <h2 class="hero_title">Bonjour je mapelle Cathy</h2>
-                    <p class="hero_desc">Bienvenue sur mon Portfolio</p>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 img-text">
+                    <h2 class="img_title">Bonjour je mapelle Cathy</h2>
+                    <p class="img_desc">Bienvenue sur mon Portfolio</p>
                 </div>
             </div>
         </div>
