compétence de code

--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
             </div>
         </div>
     </section>
+    <!--Competence-->
+    <section class="skills" id="skills">
+        <h2 class="skill-header">Mes Compétence en Code</h2>
+
+        <div class="skills-wrapper">
+            <div class="first-set animate__animated animate__pulse">
+                <img src="assets/image/html.png" alt="" loading="lazy" class="icon icon-card" />
+                <img src="assets/image/css.png" alt="" loading="lazy" class="icon icon-card" />
+                <img src="assets/image/js.png" alt="" loading="lazy" class="icon icon-card" />
+            </div>
+
+            <div class="second-set animate__animated animate__pulse">
+                <img src="assets/image/github.png" alt="" loading="lazy" class="icon icon-card" />
+                <img src="assets/image/react.png" alt="" loading="lazy" class="icon icon-card" />
+                <img src="assets/image/trello.png" alt="" loading="lazy" class="icon icon-card" />
+            </div>
+        </div>
+    </section>
     <!-- footer section-->
     <footer id="footer">
         <div class="social-icons">
