ancrage de page

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <!--mini banner -->
     <nav class="mini-nav">
         <ul>
-            <li><a href="#">Présentation</a></li>
+            <li><a href="#presentation">Présentation</a></li>
             <li><a href="#">Mes Projets</a></li>
-            <li><a href="#">Compétence</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#competence">Compétence</a></li>
+            <li><a href="#footer">Contact</a></li>
         </ul>
     </nav>
     <!-- main banner -->
@@ -32,9 +32,14 @@
             </div>
         </div>
     </section>
+    <!--Presentation-->
+    <section id="presentation">
+        <h2>Présentation</h2>
+        <p>Bienvenue sur ma page. Ci-dessous, vous trouverez un graphique de blablablabla</p>
+    </section>
     <!--Competence-->
-    <section class="skills" id="skills">
-        <h2 class="skill-header">Mes Compétences en Code</h2>
+    <section class="skills" id="competence">
+        <h2 class="skill-header">Mes Compétences en Code et Gestion</h2>
         <div class="skills-wrapper">
             <div class="first-set animate__animated animate__pulse">
                 <img src="assets/image/html.png" alt="" loading="lazy" class="icon " />
@@ -50,9 +55,12 @@
         </div>
     </section>
     <!--Competence langue-->
-    <div class="language-chart">
-        <canvas id="languageChart"></canvas>
-    </div>
+    <section>
+        <h2 class="skill-header skills">Mes Compétences en Langue</h2>
+        <div class="language-chart">
+            <canvas id="languageChart"></canvas>
+        </div>
+    </section>
     <!-- footer section-->
     <footer id="footer">
         <div class="social-icons">
