--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                 <img src="assets/image/react.png" alt=" " class="icon" />
                 <img src="assets/image/trello.png" alt="" class="icon " />
             </div>
+            <div class="second-set animate__animated animate__pulse">
+                <img src="assets/image/adobe.png" alt=" " class="icon " />
+                <img src="assets/image/powerpoint.png" alt=" " class="icon" />
+                <img src="assets/image/excel.png" alt="" class="icon " />
+            </div>
         </div>
     </section>
     <!--Competence langue-->
