comptence et alt en plus

--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
         <h2 class="skill-header">Mes Compétences en Code et Gestion</h2>
         <div class="skills-wrapper">
             <div class="first-set animate__animated animate__pulse">
-                <img src="assets/image/html.png" alt="" loading="lazy" class="icon " />
-                <img src="assets/image/css.png" alt="" loading="lazy" class="icon " />
-                <img src="assets/image/js.png" alt="" loading="lazy" class="icon " />
+                <img src="assets/image/html.png" alt="html" loading="lazy" class="icon " />
+                <img src="assets/image/css.png" alt="css" loading="lazy" class="icon " />
+                <img src="assets/image/js.png" alt="javascript" loading="lazy" class="icon " />
             </div>
 
             <div class="second-set animate__animated animate__pulse">
-                <img src="assets/image/github.png" alt=" " class="icon " />
-                <img src="assets/image/react.png" alt=" " class="icon" />
-                <img src="assets/image/trello.png" alt="" class="icon " />
+                <img src="assets/image/github.png" alt="github" class="icon " />
+                <img src="assets/image/react.png" alt="react" class="icon" />
+                <img src="assets/image/trello.png" alt="trello" class="icon " />
             </div>
             <div class="second-set animate__animated animate__pulse">
-                <img src="assets/image/adobe.png" alt=" " class="icon " />
-                <img src="assets/image/powerpoint.png" alt=" " class="icon" />
-                <img src="assets/image/excel.png" alt="" class="icon " />
+                <img src="assets/image/adobe.png" alt="adobe photo" class="icon " />
+                <img src="assets/image/powerpoint.png" alt="porwerpoint" class="icon" />
+                <img src="assets/image/excel.png" alt="excel" class="icon " />
             </div>
         </div>
     </section>
