ajout des projet

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="mini-nav">
         <ul>
             <li><a href="#presentation">Présentation</a></li>
-            <li><a href="#">Mes Projets</a></li>
+            <li><a href="#projet">Mes Projets</a></li>
             <li><a href="#competence">Compétence</a></li>
             <li><a href="#footer">Contact</a></li>
         </ul>
@@ -26,7 +26,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 img-text">
-                    <h2 class="img_title">Bonjour je m'apelle Cathy</h2>
+                    <h2 class="img_title">Bonjour je m'appelle Cathy</h2>
                     <p class="img_desc">Bienvenue sur mon Portfolio</p>
                 </div>
             </div>
@@ -64,6 +64,17 @@
         <h2 class="skill-header skills">Mes Compétences en Langue</h2>
         <div class="language-chart">
             <canvas id="languageChart"></canvas>
+        </div>
+    </section>
+    <section id="projet">
+        <h2 class="skills">Mes Projets</h2>
+        <div class="masonry">
+            <div><img src="/assets/image/Booki.png" alt></div>
+            <div><img src="/assets/image/SophieBluel.png" alt></div>
+            <div><img src="/assets/image/Qwenta.png" alt></div>
+            <div><img src="/assets/image/Nina.jpg" alt></div>
+            <div><img src="/assets/image/Kasa.png" alt></div>
+            <div><img src="/assets/image/Grimoire.png" alt></div>
         </div>
     </section>
     <!-- footer section-->
