--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 img-text">
-                <h2 class="img_title">Bonjour je m'appelle Cathy</h2>
-                <p class="img_desc">Bienvenue sur mon Portfolio</p>
+                <h2 class="img_title">"Bonjour et bienvenue sur mon portfolio !</h2>
+                <p class="img_desc">Je m'appelle Cathy Hegesippe </p>
             </div>
         </div>
     </div>
@@ -35,21 +35,24 @@
 <!--Presentation-->
 <section id="presentation" class="fond">
     <h2>Présentation</h2>
-    <p>Bienvenue sur ma page. Ci-dessous, vous trouverez un graphique de blablablabla Le Lorem Ipsum est simplement
-        du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux
-        texte standard de l'imprimerie depuis les années 1500, quand un imprimeur anonyme assembla ensemble des
-        morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq
-        siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a
-        été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem
-        Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus
-        PageMaker.
-        Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
-        Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un imprimeur anonyme
-        assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait
-        que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en
-        soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des
-        passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de
-        texte, comme Aldus PageMaker.</p>
+    <p>Je suis une développeuse web polyvalente avec une expertise dans différents domaines du développement. Maîtrisant
+        les langages HTML, CSS et JavaScript, je crée des interfaces conviviales et interactives pour offrir des
+        expériences utilisateur exceptionnelles. J'ai également une expérience solide avec des frameworks frontend tels
+        que React, qui me permettent de développer des applications modernes et dynamiques.
+        Mon expérience ne se limite pas seulement au développement technique. J'ai également étudié les langues et les
+        cultures de l'Asie orientale, ce qui m'a permis d'acquérir des compétences linguistiques en coréen, japonais et
+        chinois, ainsi que des notions dans d'autres langues. Ces compétences linguistiques s'associent à ma vision
+        globale pour créer des interfaces qui répondent aux besoins d'un public diversifié.
+        Au-delà du code, je suis passionnée par la sociologie et la politique, ce qui me donne une perspective unique
+        pour concevoir des applications qui reflètent les valeurs et les aspirations de la société. Mon approche centrée
+        sur l'utilisateur et mon désir d'apprendre en permanence me permettent de développer des solutions qui sont à la
+        fois fonctionnelles et significatives.
+        Vous trouverez dans ce portfolio une sélection de mes projets de développement web, illustrant mon engagement
+        envers l'excellence technique et mon souci du détail dans la création d'interfaces convaincantes. J'espère que
+        vous apprécierez explorer ces réalisations autant que j'ai aimé les créer.
+        N'hésitez pas à me contacter pour discuter de collaborations potentielles, de projets ou simplement pour
+        échanger sur les dernières tendances du développement web et des langues. Merci de prendre le temps de découvrir
+        mon travail !</p>
 </section>
 <!--Competence-->
 <section class="skills" id="competence">
@@ -103,6 +106,6 @@
 </footer>
 </body>
 <script src="./chart.js"></script>
-<script src="modal.js"></script>
+<script src="/modal.js"></script>
 
 </html>
