--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
 <section id="projet">
     <h2 class="skills">Mes Projets</h2>
     <div class="masonry">
-        <div><img src="/assets/image/Booki.png" alt></div>
-        <div><img src="/assets/image/SophieBluel.png" alt></div>
-        <div><img src="/assets/image/Qwenta.png" alt></div>
-        <div><img src="/assets/image/Nina.jpg" alt></div>
-        <div><img src="/assets/image/Kasa.png" alt></div>
-        <div><img src="/assets/image/Grimoire.png" alt></div>
+        <div><img src="./assets/image/Booki.png" alt></div>
+        <div><img src="./assets/image/SophieBluel.png" alt></div>
+        <div><img src="./assets/image/Qwenta.png" alt></div>
+        <div><img src="./assets/image/Nina.jpg" alt></div>
+        <div><img src="./assets/image/Kasa.png" alt></div>
+        <div><img src="./assets/image/Grimoire.png" alt></div>
     </div>
 </section>
 <!-- footer section-->
