--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 img-text">
-                <h2 class="img_title">"Bonjour et bienvenue sur mon portfolio !</h2>
-                <p class="img_desc">Je m'appelle Cathy Hegesippe </p>
+                <h1 class="img_title">"Bonjour et bienvenue sur mon portfolio !</h1>
+                <h2 class="img_desc">Je m'appelle Cathy Hegesippe </h2>
             </div>
         </div>
     </div>
