--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <!--Font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <!--Opengraph -->
+    <meta property="og:site_name" content="Portfolio Cathy Hegesippe" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://parkwolf.github.io/Portfolio_Cathy/" />
+    <meta property="og:title" content="Portfolio Cathy Hegesippe" />
+    <meta property="og:description" content="Portfolio développeuse front-end" />
+
 </head>
 
 <html>
