--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <h2 class="skills">Mes Projets</h2>
     <div class="masonry">
         <div><a href="https://parkwolf.github.io/P2_Hegesippe_Cathy/" target="_blank">
-                <img src="/assets/image/Booki.png" alt="projet 1 booki"></a></div>
+                <img src="./assets/image/Booki.png" alt="projet 1 booki"></a></div>
         <div><img src="./assets/image/SophieBluel.png" alt="projet 2 sophie bluel"></div>
         <div><img src="./assets/image/Qwenta.png" alt="projet 3 Qwenta"></div>
         <div><img src="./assets/image/Nina.jpg" alt="projet 4 ninca carducci"></div>
