--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ul>
         <li><a href="#presentation">Présentation</a></li>
         <li><a href="#projet">Mes Projets</a></li>
-        <li><a href="#competence">Compétence</a></li>
+        <li><a href="#competence">Compétences</a></li>
         <li><a href="#footer">Contact</a></li>
     </ul>
 </nav>
