lien github pour chaque projet

--- a/index.html
+++ b/index.html
@@ -87,12 +87,16 @@
     <h2 class="skills">Mes Projets</h2>
     <div class="masonry">
         <div><a href="https://parkwolf.github.io/P2_Hegesippe_Cathy/" target="_blank">
-                <img src="./assets/image/Booki.png" alt="projet 1 booki"></a></div>
-        <div><img src="./assets/image/SophieBluel.png" alt="projet 2 sophie bluel"></div>
+                <img src="./assets/image/Booki.png" alt="projet 2 booki"></a></div>
+        <div><a href="https://github.com/Parkwolf/P3_Hegesippe_Cathy" target="_blank">
+                <img src="./assets/image/SophieBluel.png" alt="projet 3 SophieBluel"></a></div>
+        <div><a href="https://github.com/Parkwolf/P5_Hegesippe_Cathy" target="_blank">
+                <img src="./assets/image/Nina.jpg" alt="projet 5 Nina carducci"></a></div>
+        <div><a href="https://github.com/Parkwolf/P6_Hegesippe_Cathy" target="_blank">
+                <img src="./assets/image/Kasa.png" alt="projet 6 kasa"></a></div>
+        <div><a href="https://github.com/Parkwolf/P7_Hegesippe_Cathy" target="_blank">
+                <img src="./assets/image/Grimoire.png" alt="projet 7 grimoire"></a></div>
         <div><img src="./assets/image/Qwenta.png" alt="projet 3 Qwenta"></div>
-        <div><img src="./assets/image/Nina.jpg" alt="projet 4 ninca carducci"></div>
-        <div><img src="./assets/image/Kasa.png" alt="projet 5 kasa"></div>
-        <div><img src="./assets/image/Grimoire.png" alt="projet 6 grimoire"></div>
     </div>
 </section>
 <!-- footer section-->
