--- a/index.html
+++ b/index.html
@@ -37,22 +37,39 @@
     <h2>Présentation</h2>
     <p>Je suis une développeuse web polyvalente avec une expertise dans différents domaines du développement. Maîtrisant
         les langages HTML, CSS et JavaScript, je crée des interfaces conviviales et interactives pour offrir des
-        expériences utilisateur exceptionnelles. J'ai également une expérience solide avec des frameworks frontend tels
-        que React, qui me permettent de développer des applications modernes et dynamiques.
-        Mon expérience ne se limite pas seulement au développement technique. J'ai également étudié les langues et les
-        cultures de l'Asie orientale, ce qui m'a permis d'acquérir des compétences linguistiques en coréen, japonais et
-        chinois, ainsi que des notions dans d'autres langues. Ces compétences linguistiques s'associent à ma vision
-        globale pour créer des interfaces qui répondent aux besoins d'un public diversifié.
-        Au-delà du code, je suis passionnée par la sociologie et la politique, ce qui me donne une perspective unique
-        pour concevoir des applications qui reflètent les valeurs et les aspirations de la société. Mon approche centrée
-        sur l'utilisateur et mon désir d'apprendre en permanence me permettent de développer des solutions qui sont à la
-        fois fonctionnelles et significatives.
-        Vous trouverez dans ce portfolio une sélection de mes projets de développement web, illustrant mon engagement
-        envers l'excellence technique et mon souci du détail dans la création d'interfaces convaincantes. J'espère que
-        vous apprécierez explorer ces réalisations autant que j'ai aimé les créer.
-        N'hésitez pas à me contacter pour discuter de collaborations potentielles, de projets ou simplement pour
-        échanger sur les dernières tendances du développement web et des langues. Merci de prendre le temps de découvrir
-        mon travail !</p>
+        expériences utilisateur exceptionnelles. </p>
+    <button id="en-savoir-plus">En savoir plus</button>
+
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>J'ai également une expérience solide avec des frameworks frontend tels
+                que React, qui me permettent de développer des applications modernes et dynamiques.
+                Mon expérience ne se limite pas seulement au développement technique. J'ai également étudié les langues
+                et les
+                cultures de l'Asie orientale, ce qui m'a permis d'acquérir des compétences linguistiques en coréen,
+                japonais et
+                chinois, ainsi que des notions dans d'autres langues. Ces compétences linguistiques s'associent à ma
+                vision
+                globale pour créer des interfaces qui répondent aux besoins d'un public diversifié.
+                Au-delà du code, je suis passionnée par la sociologie et la politique, ce qui me donne une perspective
+                unique
+                pour concevoir des applications qui reflètent les valeurs et les aspirations de la société. Mon approche
+                centrée
+                sur l'utilisateur et mon désir d'apprendre en permanence me permettent de développer des solutions qui
+                sont à la
+                fois fonctionnelles et significatives.
+                Vous trouverez dans ce portfolio une sélection de mes projets de développement web, illustrant mon
+                engagement
+                envers l'excellence technique et mon souci du détail dans la création d'interfaces convaincantes.
+                J'espère que
+                vous apprécierez explorer ces réalisations autant que j'ai aimé les créer.
+                N'hésitez pas à me contacter pour discuter de collaborations potentielles, de projets ou simplement pour
+                échanger sur les dernières tendances du développement web et des langues. Merci de prendre le temps de
+                découvrir
+                mon travail !.</p>
+        </div>
+    </div>
 </section>
 <!--Competence-->
 <section class="skills" id="competence">
