--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
 </footer>
 </body>
 <script src="./chart.js"></script>
-<script src="/modal.js"></script>
+<script src="./modal.js"></script>
 
 </html>
